# Agentic_Workflow

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/commands/: implement-feature.md  refactor.md  review-code.md  write-tests.md
.githooks/: pre-commit
.github/workflows/: backend.yml  docker.yml  frontend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  research_agent.py  router.py  support_agent.py
backend/app/api/: dependencies.py  routes.py
backend/app/checkpoints/: __init__.py  models.py  postgres_checkpoint.py  repository.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/evaluation/: __init__.py  context_precision.py  context_precision_schemas.py  evaluator.py  judge.py  judge_schemas.py  ragas_scorer.py  schemas.py  service.py
backend/app/graph/: __init__.py  state.py  visualization.py  workflow.py
backend/app/graph/nodes/: __init__.py  auto_approval.py  checkpoint.py  context_eval.py  final_response.py  generator.py  groundedness.py  human_approval.py  knowledge_update.py  llm_judge.py  reranker.py  research.py  retriever.py  router.py  structured_output.py  support.py  web_search.py
backend/app/observability/: __init__.py  metrics.py  middleware.py  node_telemetry.py  token_tracker.py  tracing.py
backend/app/rag/: __init__.py  embeddings.py  ingestion.py  reranker.py  retriever.py  vector_store.py
backend/app/schemas/: __init__.py  requests.py  responses.py
backend/app/services/: __init__.py  approval_service.py  confidence.py
backend/docs/: observability.md  workflow_diagram.md
backend/tests/: conftest.py
backend/tests/integration/: test_checkpoints.py  test_graph.py
backend/tests/unit/: test_confidence.py  test_context_precision.py  test_groundedness.py  test_human_approval.py  test_llm_judge.py  test_observability.py  test_reranking.py  test_research_agent.py  test_retrieval.py  test_router.py  test_support_agent.py
data/: eval_dataset.yaml
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.ts  workflow.ts
frontend/src/components/: ApprovalPanel.tsx  BotIcon.tsx  (+6 more)
scripts/: install-hooks.sh  run_eval.py  seed_kb.sh
(+4 files in other folders)
