[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-workflow"
version = "0.1.0"
description = "Production-style AI workflow with LangGraph, RAG, and human-in-the-loop"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",

    # Vector store
    "chromadb>=0.5.0",

    # Embeddings & reranking
    "sentence-transformers>=3.3.0",

    # Database
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",

    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-exporter-prometheus>=0.44b0",
    "prometheus-client>=0.20.0",

    # Logging
    "structlog>=24.4.0",

    # HTTP client
    "httpx>=0.28.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
]
langsmith = [
    "langsmith>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"
markers = [
    "integration: marks tests that require a live PostgreSQL instance (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]
